# scrn

./: .ralph_iter_output  .ralph_status  Cargo.toml  PRD.md  README.md  install  justfile  progress.txt  todo.md
docs/plans/: 2026-03-06-mru-overlay-design.md  2026-03-06-mru-overlay.md  2026-03-06-recent-centered-design.md  2026-03-06-recent-centered.md
src/: app.rs  config.rs  git.rs  logging.rs  main.rs  pty.rs  screen.rs  shell.rs  ui.rs  workspace.rs
vt100-patch/src/: grid.rs  screen.rs
