[package]
name = "scrn"
version = "2.16.0"
edition = "2021"
authors = ["Jens Bech-Sørensen"]
license = "MIT"
description = "A terminal UI for managing GNU Screen sessions"
repository = "https://github.com/jensbech/scrn"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
vt100 = "0.15"
libc = "0.2"

[patch.crates-io]
vt100 = { path = "vt100-patch" }

[profile.release]
opt-level = 3
lto = true
strip = true
